@@ -1,3 +1,13 @@
+2008-10-29  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dialogs.c
+	  src/connection-editor/ip4-routes-dialog.c
+	  src/connection-editor/ip4-routes-dialog.h
+	  src/connection-editor/page-ip4.c
+	  src/gconf-helpers/gconf-upgrade.c
+	  src/wireless-dialog.c
+		- Use IP4 setting accessors; fix leaks
+
 2008-10-29  Tambet Ingo  <tambet@gmail.com>
 
 	* src/connection-editor/nm-connection-list.c
